# GBMiner

./: CMakeLists.txt  README.md
example_graph/: edges.txt  edgetype.txt  nodes.txt
include/: CMakeLists.txt  Logger.h  main.cpp
kgclient/: CMakeLists.txt  Opts.cpp  Opts.h  Readme.md  main.cpp
kgserver/: AbstractGraph.h  AbstractParser.h  AbstractPath.h  AbstractTypedGraph.h  CMakeLists.txt  GraphProperty.cpp  GraphProperty.h  MetaPath.cpp  MetaPath.h  Opts.cpp  Opts.h  Path.cpp  Path.h  Readme.md  SocketServer.cpp  SocketServer.h  TypedDirectedGraph.cpp  TypedDirectedGraph.h  Worker.cpp  Worker.h  jsonParser.cpp  jsonParser.h  main.cpp  opts.cpp  opts.h
test/: CMakeLists.txt  LoggerTest.cpp  main.cpp
test/kgserver/: CMakeLists.txt  GraphPropertyTest.cpp  MetaPathTest.cpp  PathTest.cpp  TypedDirectedGraphTest.cpp  basic_test.cpp  main.cpp
